# pacmi26-observability

./: .gitignore  CITATION.cff  Makefile  PROVENANCE.md  README.md  REPRODUCTION.md  pyproject.toml
data/: entropy_trace_wombat.json  exp27_bounded_verification_20260206_205725.csv  exp27b_detailed_20260206_230203.csv
figures/: fig1_entropy_trace.tex
scripts/: fig1_entropy_trace.py  fig2_confidence_distributions.py  fig3_budget_curve.py  generate_trace.py
src/observability/: __init__.py  interface.py
